css fix: more height for article numbers to avoid cropping

--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -74,7 +74,7 @@
 .article__number {
   font-family: "Abril Fatface", sans-serif;
   font-size: 36px;
-  height: 30px;
+  height: 32px;
   overflow: hidden;
   color: #e41a1f;
   cursor: pointer;
@@ -148,7 +148,7 @@
   }
   .article__number {
     font-size: 44px;
-    height: 34px;
+    height: 36px;
   }
   .article__teaser + * {
     margin-top: calc(100vh - 80px);
@@ -161,7 +161,7 @@
   }
   .article__number {
     font-size: 85px;
-    height: 66px;
+    height: 70px;
   }
   .article__teaser-text {
     font-size: 2.5rem;
@@ -181,23 +181,3 @@
   object-fit: cover;
   }
 }
-
-/*
-.article__subtitle {
-  font-family: "Abril Fatface", cursive;
-  color: #e41a1f;
-  font-size: 50px;
-  width: 54%;
-  margin-left: 10%;
-}
-.article__interview {
-  font-family: "Lato", sans-serif;
-  font-weight: 600;
-  text-align: left;
-  line-height: 2rem;
-  color: #e41a1f;
-  font-size: 20px;
-  width: 54%;
-  margin-left: 10%;
-} */
-/* Responsive */
